<resources>
    <string name="app_name">Ant Recorder</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="digit_0">0</string>
    <string name="undo">Undo</string>
    <string name="number_placeholder">-</string>
    <string name="start">Start</string>
    <string name="hint_experiment_name">Experiment name</string>
    <string name="new_experiment">New experiment</string>
    <string name="recent_experiments">Recent experiments</string>
    <string name="open">Open</string>
    <string name="export">Export</string>
</resources>